--- a/_ExcellOn_.csproj
+++ b/_ExcellOn_.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Areas\Admin\Controllers\AdminHomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\UserController.cs" />
     <Compile Include="Areas\Admin\Controllers\BaseController.cs" />
+    <Compile Include="Areas\Admin\Controllers\UserManagementController.cs" />
     <Compile Include="Areas\Admin\ViewModel\LoginViewModel.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -3293,6 +3294,7 @@
     <Content Include="Areas\Admin\Views\Shared\_TopnavLayout.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_SidenavLayout.cshtml" />
     <Content Include="Areas\Admin\Views\AdminHome\_ViewStart.cshtml" />
+    <Content Include="Areas\Admin\Views\UserManagement\MyProfile.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
