--- a/_ExcellOn_.csproj
+++ b/_ExcellOn_.csproj
@@ -146,6 +146,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\AdminHomeController.cs" />
+    <Compile Include="Areas\Admin\Controllers\CustomerManagementController.cs" />
     <Compile Include="Areas\Admin\Controllers\UserController.cs" />
     <Compile Include="Areas\Admin\Controllers\BaseController.cs" />
     <Compile Include="Areas\Admin\Controllers\UserManagementController.cs" />
@@ -3288,13 +3289,13 @@
     <Content Include="Areas\Admin\Public\vendor\nucleo\fonts\nucleo-icons.woff" />
     <Content Include="Areas\Admin\Public\vendor\nucleo\fonts\nucleo-icons.woff2" />
     <Content Include="Areas\Admin\Public\vendor\prismjs\components.json" />
-    <Content Include="Areas\Admin\Views\User\MyProfile.cshtml" />
-    <Content Include="Areas\Admin\Views\AdminHome\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminHome\DashboardIndex.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_MainLayout.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_TopnavLayout.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_SidenavLayout.cshtml" />
     <Content Include="Areas\Admin\Views\AdminHome\_ViewStart.cshtml" />
     <Content Include="Areas\Admin\Views\UserManagement\MyProfile.cshtml" />
+    <Content Include="Areas\Admin\Views\CustomerManagement\CustomerIndex.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
