CRUD company by ajax. Tùy chỉnh datatable

--- a/_ExcellOn_.csproj
+++ b/_ExcellOn_.csproj
@@ -146,6 +146,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\AdminHomeController.cs" />
+    <Compile Include="Areas\Admin\Controllers\CompanyManagementController.cs" />
     <Compile Include="Areas\Admin\Controllers\CustomerManagementController.cs" />
     <Compile Include="Areas\Admin\Controllers\UserController.cs" />
     <Compile Include="Areas\Admin\Controllers\BaseController.cs" />
@@ -3296,6 +3297,8 @@
     <Content Include="Areas\Admin\Views\AdminHome\_ViewStart.cshtml" />
     <Content Include="Areas\Admin\Views\UserManagement\MyProfile.cshtml" />
     <Content Include="Areas\Admin\Views\CustomerManagement\CustomerIndex.cshtml" />
+    <Content Include="Areas\Admin\Views\CompanyManagement\CompanyIndex.cshtml" />
+    <Content Include="Areas\Admin\Public\css\loader.css" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -3325,6 +3328,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Views\Base\" />
+    <Folder Include="Areas\Admin\Views\Company\" />
     <Folder Include="Views\Base\" />
     <Folder Include="Views\Shared\" />
   </ItemGroup>
