--- a/_ExcellOn_.csproj
+++ b/_ExcellOn_.csproj
@@ -148,6 +148,8 @@
     <Compile Include="Areas\Admin\Controllers\AdminHomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\CompanyManagementController.cs" />
     <Compile Include="Areas\Admin\Controllers\CustomerManagementController.cs" />
+    <Compile Include="Areas\Admin\Controllers\ImageManagementController.cs" />
+    <Compile Include="Areas\Admin\Controllers\ServiceManagementController.cs" />
     <Compile Include="Areas\Admin\Controllers\UserController.cs" />
     <Compile Include="Areas\Admin\Controllers\BaseController.cs" />
     <Compile Include="Areas\Admin\Controllers\UserManagementController.cs" />
@@ -155,7 +157,6 @@
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ServicesController.cs" />
-    <Compile Include="Controllers\UserInFoesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -165,7 +166,9 @@
     <Compile Include="Models\Customer.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\MailModel.cs" />
+    <Compile Include="Models\Image.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -193,7 +196,6 @@
     <Compile Include="Models\PermissionRole.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\ResultTeam.cs" />
     <Compile Include="Models\Role.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -211,8 +213,6 @@
     </Compile>
     <Compile Include="Models\ViewModel\SignInViewModel.cs" />
     <Compile Include="Models\ViewModel\SignUpViewModel.cs" />
-    <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
-    <Compile Include="obj\Release\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -2878,12 +2878,6 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
-    <Content Include="obj\Debug\TempPE\Models.Model1.Context.cs.dll" />
-    <Content Include="obj\Debug\TempPE\Models.Model1.cs.dll" />
-    <Content Include="obj\Debug\TempPE\Models.Model1.Designer.cs.dll" />
-    <Content Include="obj\Debug\_ExcellOn_.csproj.FileListAbsolute.txt" />
-    <Content Include="obj\Debug\_ExcellOn_.dll" />
-    <Content Include="obj\Debug\_ExcellOn_.pdb" />
     <Content Include="packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll" />
     <Content Include="packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.pdb" />
     <Content Include="packages\BCrypt.Net-Next.4.0.2\lib\net20\BCrypt.Net-Next.dll" />
@@ -2966,6 +2960,15 @@
     <Content Include="packages\EntityFramework.6.1.3\tools\EntityFramework.PowerShell.dll" />
     <Content Include="packages\EntityFramework.6.1.3\tools\EntityFramework.PowerShell.Utility.dll" />
     <Content Include="packages\EntityFramework.6.1.3\tools\migrate.exe" />
+    <Content Include="Content\Manh\assets\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\Manh\assets\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\Manh\assets\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\Manh\assets\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content\Manh\assets\fonts\FontAwesome.otf" />
+    <Content Include="Areas\Admin\Views\ServiceManagement\ServiceIndex.cshtml" />
+    <Content Include="Areas\Admin\Views\ServiceManagement\Add.cshtml" />
+    <Content Include="Areas\Admin\Views\ServiceManagement\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\ImageManagement\ImageIndex.cshtml" />
     <None Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1-vsdoc.js" />
     <Content Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1.js" />
     <Content Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1.min.js" />
@@ -3136,9 +3139,12 @@
     <Content Include="packages\System.Runtime.CompilerServices.Unsafe.4.5.3\version.txt" />
     <Content Include="packages\WebGrease.1.6.0\lib\WebGrease.dll" />
     <Content Include="packages\WebGrease.1.6.0\tools\WG.EXE" />
+    <Content Include="Public\Image\95-telemarketing.jpg" />
     <Content Include="Public\Image\avt.png" />
-    <Content Include="Public\Image\Business-Growth.png" />
     <Content Include="Public\Image\OIP.jfif" />
+    <Content Include="Public\Image\th %281%29.jfif" />
+    <Content Include="Public\Image\th %282%29.jfif" />
+    <Content Include="Public\Image\th.jfif" />
     <Content Include="Public\Login\css\login.css" />
     <Content Include="Public\Login\js\login.js" />
     <Content Include="Public\Profile\profile.css" />
@@ -3675,11 +3681,6 @@
     <Content Include="Areas\Admin\Views\CustomerManagement\CustomerIndex.cshtml" />
     <Content Include="Areas\Admin\Views\CompanyManagement\CompanyIndex.cshtml" />
     <Content Include="Areas\Admin\Public\css\loader.css" />
-    <Content Include="Content\Manh\assets\fonts\fontawesome-webfont.eot" />
-    <Content Include="Content\Manh\assets\fonts\fontawesome-webfont.ttf" />
-    <Content Include="Content\Manh\assets\fonts\fontawesome-webfont.woff" />
-    <Content Include="Content\Manh\assets\fonts\fontawesome-webfont.woff2" />
-    <Content Include="Content\Manh\assets\fonts\FontAwesome.otf" />
     <Content Include="bin\roslyn\csc.exe.config" />
     <Content Include="bin\roslyn\csc.rsp" />
     <Content Include="bin\roslyn\csi.exe.config" />
@@ -3695,14 +3696,6 @@
     <Content Include=".vs\slnx.sqlite" />
     <Content Include=".vs\VSWorkspaceState.json" />
     <Content Include=".vs\_ExcellOn_\config\applicationhost.config" />
-    <Content Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
-    <Content Include="obj\Debug\edmxResourcesToEmbed\Models\Model1.csdl" />
-    <Content Include="obj\Debug\edmxResourcesToEmbed\Models\Model1.msl" />
-    <Content Include="obj\Debug\edmxResourcesToEmbed\Models\Model1.ssdl" />
-    <Content Include="obj\Debug\_ExcellOn_.csproj.AssemblyReference.cache" />
-    <Content Include="obj\Debug\_ExcellOn_.csproj.CopyComplete" />
-    <Content Include="obj\Debug\_ExcellOn_.csproj.CoreCompileInputs.cache" />
-    <Content Include="obj\Release\_ExcellOn_.csproj.AssemblyReference.cache" />
     <Content Include="packages\Antlr.3.5.0.2\.signature.p7s" />
     <Content Include="packages\Antlr.3.5.0.2\Antlr.3.5.0.2.nupkg" />
     <Content Include="packages\BCrypt.Net-Next.4.0.2\.signature.p7s" />
@@ -3884,6 +3877,12 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Customer\Login.cshtml" />
     <Content Include="Views\Home\abv.cshtml" />
+    <Content Include="Views\UserInFoes\Create.cshtml" />
+    <Content Include="Views\UserInFoes\Delete.cshtml" />
+    <Content Include="Views\UserInFoes\Details.cshtml" />
+    <Content Include="Views\UserInFoes\Edit.cshtml" />
+    <Content Include="Views\UserInFoes\Index.cshtml" />
+    <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Services\company.cshtml" />
     <Content Include="Views\Services\Create.cshtml" />
     <Content Include="Views\Services\Delete.cshtml" />
@@ -3894,12 +3893,6 @@
     <Content Include="Views\Services\feedback.cshtml" />
     <Content Include="Views\Services\Index.cshtml" />
     <Content Include="Views\Services\service.cshtml" />
-    <Content Include="Views\UserInFoes\Create.cshtml" />
-    <Content Include="Views\UserInFoes\Delete.cshtml" />
-    <Content Include="Views\UserInFoes\Details.cshtml" />
-    <Content Include="Views\UserInFoes\Edit.cshtml" />
-    <Content Include="Views\UserInFoes\Index.cshtml" />
-    <Content Include="Views\_ViewStart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include=".vs\MVCC\v16\" />
@@ -3908,6 +3901,7 @@
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Views\Base\" />
     <Folder Include="Areas\Admin\Views\Company\" />
+    <Folder Include="Areas\Admin\Views\Image\" />
     <Folder Include="Views\Base\" />
     <Folder Include="Views\Shared\" />
   </ItemGroup>
