--- a/_ExcellOn_.csproj
+++ b/_ExcellOn_.csproj
@@ -146,17 +146,18 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\AdminHomeController.cs" />
+    <Compile Include="Areas\Admin\Controllers\CartController.cs" />
     <Compile Include="Areas\Admin\Controllers\CompanyManagementController.cs" />
     <Compile Include="Areas\Admin\Controllers\CustomerManagementController.cs" />
     <Compile Include="Areas\Admin\Controllers\ImageManagementController.cs" />
     <Compile Include="Areas\Admin\Controllers\ServiceManagementController.cs" />
+    <Compile Include="Areas\Admin\Controllers\OrderManagamentController.cs" />
     <Compile Include="Areas\Admin\Controllers\UserController.cs" />
     <Compile Include="Areas\Admin\Controllers\BaseController.cs" />
     <Compile Include="Areas\Admin\Controllers\UserManagementController.cs" />
     <Compile Include="Areas\Admin\ViewModel\LoginViewModel.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ServicesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -202,6 +203,12 @@
     <Compile Include="Models\Service.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Staff.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Staff_OrderDetail.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\sysdiagram.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -211,6 +218,8 @@
     <Compile Include="Models\UserRole.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ViewModel\EmployRequest.cs" />
+    <Compile Include="Models\ViewModel\OrderDetailViewModel.cs" />
     <Compile Include="Models\ViewModel\SignInViewModel.cs" />
     <Compile Include="Models\ViewModel\SignUpViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -273,6 +282,7 @@
     <Content Include="Areas\Admin\Public\js\components\vendor\nouislider.min.js" />
     <Content Include="Areas\Admin\Public\js\components\vendor\scrollbar.js" />
     <Content Include="Areas\Admin\Public\js\components\vendor\scrollbar.min.js" />
+    <Content Include="Areas\Admin\Public\ShoppingCart\shopping_cart.css" />
     <Content Include="Areas\Admin\Public\vendor\%40fortawesome\fontawesome-free\css\all.min.css" />
     <Content Include="Areas\Admin\Public\vendor\%40fortawesome\fontawesome-free\css\brands.min.css" />
     <Content Include="Areas\Admin\Public\vendor\%40fortawesome\fontawesome-free\css\fontawesome.min.css" />
@@ -2969,6 +2979,8 @@
     <Content Include="Areas\Admin\Views\ServiceManagement\Add.cshtml" />
     <Content Include="Areas\Admin\Views\ServiceManagement\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\ImageManagement\ImageIndex.cshtml" />
+    <Content Include="Areas\Admin\Views\OrderManagament\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Cart\Index.cshtml" />
     <None Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1-vsdoc.js" />
     <Content Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1.js" />
     <Content Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1.min.js" />
