Thay phân trang ajax bằng loadmore ajax cho giao diện phân công nhân sự.(fix được bug mất checked sau khi load trang mới)

--- a/_ExcellOn_.csproj
+++ b/_ExcellOn_.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Areas\Admin\Model\Order_Interface\OrderDetail_Interface.cs" />
     <Compile Include="Areas\Admin\Model\Permission_Role_Function.cs" />
     <Compile Include="Areas\Admin\Model\HasPermissionAttribute.cs" />
+    <Compile Include="Areas\Admin\ViewModel\AppendedStaff.cs" />
     <Compile Include="Areas\Admin\ViewModel\AssignmentSubmitViewModel.cs" />
     <Compile Include="Areas\Admin\ViewModel\GetItemObj.cs" />
     <Compile Include="Areas\Admin\ViewModel\GetItemObj_Return.cs" />
