Chỉnh sửa css sidenav và hiển thị các order

--- a/_ExcellOn_.csproj
+++ b/_ExcellOn_.csproj
@@ -162,12 +162,15 @@
     <Compile Include="Areas\Admin\Model\Order_Interface\OrderDetail_Interface.cs" />
     <Compile Include="Areas\Admin\Model\Permission_Role_Function.cs" />
     <Compile Include="Areas\Admin\Model\HasPermissionAttribute.cs" />
+    <Content Include="Areas\Admin\Public\JdLomX\css\avzv.css" />
     <Compile Include="Areas\Admin\ViewModel\AppendedStaff.cs" />
     <Compile Include="Areas\Admin\ViewModel\AssignmentSubmitViewModel.cs" />
+    <Compile Include="Areas\Admin\ViewModel\CustomerViewModel.cs" />
     <Compile Include="Areas\Admin\ViewModel\GetItemObj.cs" />
     <Compile Include="Areas\Admin\ViewModel\GetItemObj_Return.cs" />
     <Compile Include="Areas\Admin\ViewModel\LoginViewModel.cs" />
     <Compile Include="Areas\Admin\ViewModel\OrderDetailViewModel.cs" />
+    <Compile Include="Areas\Admin\ViewModel\Order_OrderDetail.cs" />
     <Compile Include="Areas\Admin\ViewModel\RoleViewModel.cs" />
     <Compile Include="Areas\Admin\ViewModel\SendEmailModel.cs" />
     <Compile Include="Areas\Admin\ViewModel\StaffAssignmentViewModel.cs" />
@@ -261,8 +264,11 @@
     <Content Include="Areas\Admin\Public\css\bootstrap\bootstrap-reboot.min.css" />
     <Content Include="Areas\Admin\Public\css\bootstrap\bootstrap.css" />
     <Content Include="Areas\Admin\Public\css\bootstrap\bootstrap.min.css" />
+    <Content Include="Areas\Admin\Public\css\button_move_top.css" />
     <Content Include="Areas\Admin\Public\css\choose_staff.css" />
+    <Content Include="Areas\Admin\Public\css\order.css" />
     <Content Include="Areas\Admin\Public\css\panel.css" />
+    <Content Include="Areas\Admin\Public\css\style.css" />
     <Content Include="Areas\Admin\Public\DataTable\pagination.css" />
     <Content Include="Areas\Admin\Public\fonts\nucleo\nucleo-icons.svg" />
     <Content Include="Areas\Admin\Public\img\brand\blue.png" />
@@ -282,8 +288,6 @@
     <Content Include="Areas\Admin\Public\img\theme\team-4.jpg" />
     <Content Include="Areas\Admin\Public\img\theme\team-5.jpg" />
     <Content Include="Areas\Admin\Public\img\theme\vue.jpg" />
-    <Content Include="Areas\Admin\Public\JdLomX\css\asdasd.css" />
-    <Content Include="Areas\Admin\Public\JdLomX\css\style.css" />
     <Content Include="Areas\Admin\Public\JdLomX\index.html" />
     <Content Include="Areas\Admin\Public\JdLomX\license.txt" />
     <Content Include="Areas\Admin\Public\JdLomX\README.txt" />
@@ -315,6 +319,7 @@
     <Content Include="Areas\Admin\Public\js\components\vendor\nouislider.min.js" />
     <Content Include="Areas\Admin\Public\js\components\vendor\scrollbar.js" />
     <Content Include="Areas\Admin\Public\js\components\vendor\scrollbar.min.js" />
+    <Content Include="Areas\Admin\Public\js\Order.js" />
     <Content Include="Areas\Admin\Public\Plugin_Table_HD\css\pagination.css" />
     <Content Include="Areas\Admin\Public\Plugin_Table_HD\css\paging.css" />
     <Content Include="Areas\Admin\Public\Plugin_Table_HD\css\style.css" />
@@ -3038,6 +3043,9 @@
     <Content Include="Areas\Admin\Views\CompanyManagement\CompanyIndex2.cshtml" />
     <Content Include="Areas\Admin\Views\ServiceManagement\Assign_Staff.cshtml" />
     <Content Include="Areas\Admin\Public\Plugin_Table_HD\js\jquery-1.10.2.min.map" />
+    <Content Include="Areas\Admin\Views\OrderManagement\OrderIndex.cshtml" />
+    <Content Include="Areas\Admin\Views\_404_.cshtml" />
+    <Content Include="Areas\Admin\Views\OrderManagement\OrderIndex2.cshtml" />
     <None Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1-vsdoc.js" />
     <Content Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1.js" />
     <Content Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1.min.js" />
@@ -3212,13 +3220,21 @@
     <Content Include="Public\Image\2021_06_15_17_02_IMG_0768.JPG" />
     <Content Include="Public\Image\2021_06_15_17_03_IMG_0771.JPG" />
     <Content Include="Public\Image\95-telemarketing.jpg" />
+    <Content Include="Public\Image\artop.png" />
     <Content Include="Public\Image\ava.gif" />
     <Content Include="Public\Image\avt.png" />
     <Content Include="Public\Image\Blog-Post-Graphic-How-to-design-the-perfect-MMS_gif.gif" />
+    <Content Include="Public\Image\card-1.jpg" />
+    <Content Include="Public\Image\city.jpg" />
     <Content Include="Public\Image\OIP.jfif" />
+    <Content Include="Public\Image\sidebar-1.jpg" />
+    <Content Include="Public\Image\sidebar-2.jpg" />
+    <Content Include="Public\Image\sidebar-3.jpg" />
     <Content Include="Public\Image\th %281%29.jfif" />
     <Content Include="Public\Image\th %282%29.jfif" />
     <Content Include="Public\Image\th.jfif" />
+    <Content Include="Public\Image\up-arrow %281%29.png" />
+    <Content Include="Public\Image\up-arrow.png" />
     <Content Include="Public\Image\WIN_20210622_17_11_17_Pro.jpg" />
     <Content Include="Public\Image\WIN_20210622_17_11_37_Pro.jpg" />
     <Content Include="Public\Image\WIN_20210628_21_05_08_Pro.jpg" />
